--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="text-sm">
+  <body data-sveltekit-preload-data="hover" class="text-sm font-body antialiased overflow-x-hidden dark:bg-neutral-950 dark:text-white">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
