--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="text-sm font-body antialiased overflow-x-hidden scheme-light-dark  dark:bg-neutral-950 dark:text-white dark:selection:text-black dark:selection:bg-white">
-    <div style="display: contents">%sveltekit.body%</div>
+    %sveltekit.body%
   </body>
 </html>
